added some features

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,7 +39,30 @@ http {
             proxy_pass $backend;
             proxy_cache my_cache;
             proxy_read_timeout $PROXY_READ_TIMEOUT;
-            $PROXY_CACHE_VALID
+
+            # Ignore cookies
+            proxy_hide_header       Set-Cookie;
+            proxy_ignore_headers    Set-Cookie;
+            # important! Remember the special inheritance rules for proxy_set_header:
+            # http://nginx.org/ru/docs/http/ngx_http_proxy_module.html#proxy_set_header
+            proxy_set_header        Cookie "";
+
+            # Define the cache key
+            proxy_cache_key $scheme$proxy_host$request_uri;
+        
+            # Cache valid times
+            proxy_cache_valid 200 301 302 10m;
+            proxy_cache_valid 404 1m;
+
+            # Enable background updates
+            proxy_cache_background_update on;
+        
+            # Serve stale content while updating
+            proxy_cache_use_stale updating error timeout invalid_header http_500 http_502 http_503 http_504;
+
+            # Set headers for caching
+            add_header X-Cache-Status $upstream_cache_status;
+
 
             add_header 'Access-Control-Allow-Origin' '$ALLOWED_ORIGIN';
         }
